syntax = "proto3";

package HelloService_proto;

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloservice";
option java_outer_classname = "HelloServiceProto";

//The request message containing the user's name
message HelloRequest {
    string name = 1;
    int32  num1 = 2;
    int32  num2 = 3;
}

//The response message
message HelloResponse {
    string message = 1;
    int32  result = 2;
}

//service definition
service HelloService {
    rpc SayHello(HelloRequest) returns(HelloResponse);
}